word-wrap attachments fixes #56

--- a/client/sass/components/_attachment-list.scss
+++ b/client/sass/components/_attachment-list.scss
@@ -42,6 +42,7 @@
     display: inline-block;
     width: 100px;
     text-align: center;
+    word-wrap: break-word;
     .item-icon {
       display: inline-block;
     }
